<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/Margin_Horizontal"
    android:layout_marginRight="@dimen/Margin_Horizontal"
    android:layout_marginTop="@dimen/Margin_Vertical"
    android:layout_marginBottom="@dimen/Margin_Vertical"
    android:orientation="vertical"
    tools:context=".Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/Margin_Vertical"
        android:gravity="center"/>

    <EditText
        android:id="@+id/username_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16dp"
        android:hint="Username"
        android:layout_marginTop="@dimen/Margin_Vertical"
        android:background="@drawable/rounded_edittext" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16dp"
        android:hint="Password"
        android:layout_marginTop="@dimen/Margin_Vertical"
        android:background="@drawable/rounded_edittext"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Margin_Vertical"
        android:gravity="center">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="154dp"
            android:layout_height="47dp"
            android:layout_marginRight="@dimen/Margin_Horizontal"
            android:background="@drawable/rounded_shape"
            android:text="@string/login" />

        <Button
            android:id="@+id/reset_btn_login"
            android:layout_width="154dp"
            android:layout_height="47dp"
            android:background="@drawable/rounded_shape"
            android:text="@string/reset" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Margin_Horizontal"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_punya_akun"/>

        <TextView
            android:id="@+id/register_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_register"
            android:textColor="@color/purple_700"/>
    </LinearLayout>

</LinearLayout>